# agent-workspace-linux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-release.yml  release.yml
docs/: dogfood-validation.md  gpui-viewer-direction.md  handover-gpui-viewer-2026-05-25.md  permission-boundary-roadmap.md  permission-model.md  prod-readiness-audit-2026-05-25.md  public-readiness.md
npm/: .npmignore  README.md  package.json
npm/scripts/: postinstall.js
scripts/: app_qa_dogfood_smoke.sh  collect_real_grocery_evidence.sh  create_human_review_marker.py  export_release_evidence_bundle.py  final_review_bundle.py  github_explore_dogfood_probe.js  gpui_viewer_smoke.sh  grocery_browser_workflow_smoke.sh  import_release_evidence.py  integration_smoke.sh  mcp_clean_permissions_smoke.js  mcp_no_host_display_viewer_smoke.js  mcp_non_headless_viewer_smoke.js  mcp_permissions_smoke.js  mcp_terminal_tui_smoke.js  mcp_viewer_lifecycle_smoke.js  mcp_workspace_browser_cdp_smoke.js  objective_completion_audit.py  prepare_grocery_profile_copy.js  prod_readiness_smoke.sh  prune_evidence_reports.py  real_grocery_dogfood_probe.js  release_gate_audit.py  release_next_steps.py  viewer_desktop_matrix_probe.sh
scripts/lib/: chrome_cdp.js
skills/agent-workspace-linux/: SKILL.md
src/: agent.rs  browser.rs  control.rs  guardrails.rs  main.rs  permissions.rs  policy.rs  profile.rs  server.rs  viewer.rs  workspace.rs
