[package]
name = "agent-workspace-linux"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Isolated Linux desktop workspaces for AI agents."
readme = "README.md"
keywords = ["mcp", "linux", "desktop", "automation", "workspace"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", default-features = false, features = ["font-kit", "wayland", "x11"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", default-features = false, features = ["wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["macros", "rt"] }
x11rb = "0.13.2"
